// Policy definition
//
// Policy defines a client's application relation model.

syntax = "proto3";

package internal.domain.policy;
option go_package = "github.com/sourcenetwork/source-zanzibar/internal/domain/policy";

import "internal/domain/policy/tree.proto";

import "google/protobuf/timestamp.proto";

message Policy {
    string id = 1;
    string name = 2;
    string description = 3;
    repeated Resource resources = 4;
    repeated Actor actors = 5;
    google.protobuf.Timestamp created_at = 6;
    map<string, string> attributes = 10;
}

// ActorIdType specify an identifier type for an actor object.
// Actor ids are enforced as system constants.
enum ActorIdType {
    STRING = 0;
    NUMBER = 1;
    DID = 2;
}

// Actor represents a class of system users
message Actor {
    string name = 1;
    repeated ActorIdType constraints = 2;
}

// Resources represents a class of objects in the relation graph
// Example resources: files, directories, repositories, groups
message Resource {
    string name = 1;
    repeated Relation relations = 2;
}

// A Relation defines a Relation Type in the relation graph.
message Relation {
    string name = 1;
    string rewrite_expr = 2;
    Tree expression_tree = 3;
}
